# libjpeg-turbo

./: CMakeLists.txt  README.md  cjpeg.c  djpeg.c  jconfig.h  jconfigint.h  jpeglib.h
esp32/components/jpeg_turbo_codec/: CMakeLists.txt  Error_declarations.h  jpeg_turbo_dec.c  jpeg_turbo_dec.h  jpeg_turbo_enc.c  jpeg_turbo_enc.h
esp32/components/jpeg_turbo_codec/include/: jpeg_turbo_common.h  jpeg_turbo_dec.h  jpeg_turbo_enc.h
esp32/components/jpeg_turbo_codec/src/: jpeg_turbo_dec.c  jpeg_turbo_enc.c
esp32/components/libjpeg_turbo/: CMakeLists.txt
esp32/examples/jpeg_decoder/: CMakeLists.txt  Makefile  README.md
esp32/examples/jpeg_decoder/main/: CMakeLists.txt  component.mk  example_jpeg_decoder.c  jpeg_decoder.c
esp32/examples/jpeg_encoder/: CMakeLists.txt  README.md
esp32/examples/jpeg_encoder/main/: CMakeLists.txt  example_jpeg_encoder.c  jpeg_encoder.c  raw_img
esp32/test/: CMakeLists.txt  Makefile  README.md  esp_md5_record.csv
esp32/test/main/: CMakeLists.txt  jpeg_test.c
esp32_jpeg_dec/: Makefile  README.md  dmp
esp32_jpeg_dec/main/: CMakeLists.txt  diag_cli.c  jpeg_decoder.c  scli.c  smtp_client.h
esp32_jpeg_dec_mbedtls/: .djpeg.c.swp  CMakeLists.txt  sdkconfig  sdkconfig.old  tags  tmp
esp32_jpeg_dec_mbedtls/main/: CMakeLists.txt  jpeg_decoder.c  md5.c  smtp_client.c
esp32_jpeg_enc/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_jpeg_enc/main/: CMakeLists.txt  jpeg_decoder.c  jpeg_encoder.c  smtp_client.c
esp32_jpeg_test/: CMakeLists.txt
esp32_jpeg_test/main/: CMakeLists.txt  jpeg_test.c
